# MAJA

./: pubspec.yaml
Backend/maja-main/: MAJA.postman_collection.json  README.md
Backend/maja-main/app/: Dockerfile  Makefile  db.sqlite3  manage.py  nginx.default  pyproject.toml  requirements.txt  start-server.sh
Backend/maja-main/app/creators/: admin.py  apps.py  models.py  serializers.py  views.py
Backend/maja-main/app/creators/migrations/: 0001_initial.py  0002_alter_creator_bio_alter_creator_created_at_and_more.py  0003_alter_creator_image.py
Backend/maja-main/app/maja/: asgi.py  settings.py  urls.py  wsgi.py
Backend/maja-main/app/nft/: admin.py  models.py  serializers.py  views.py
Backend/maja-main/app/nft/migrations/: 0001_initial.py  0002_alter_nft_description.py  0003_alter_nft_image.py
Backend/maja-main/app/users/: admin.py  authentication.py  models.py  serializers.py  urls.py  utils.py  views.py
Backend/maja-main/app/users/migrations/: 0001_initial.py
Backend/maja-main/infra/: README.md  cdk.json  package-lock.json  package.json
Mobile Application/: README.md
Mobile Application/ios/Runner/: Info.plist
Mobile Application/lib/widgets/: custom_bottom_bar.dart  custom_button.dart  custom_icon_button.dart  custom_text_form_field.dart
android/app/: build.gradle
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/core/: app_export.dart
lib/routes/: app_routes.dart
lib/theme/: app_decoration.dart  app_style.dart
lib/widgets/: custom_floating_button.dart  custom_search_view.dart
test/: widget_test.dart
(+116 files in other folders)
